Fix npm package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lumos-token-mint",
+  "name": "hello-lumos",
   "version": "0.0.1",
   "author": "tspoff@gmail.com <tspoff@gmail.com>",
   "license": "MIT",
