--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
+    "@nervosnetwork/ckb-sdk-core": "^0.34.0",
     "@nervosnetwork/ckb-sdk-utils": "^0.34.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
