--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "react-scripts": "3.4.1",
     "secp256k1": "^4.0.2",
     "styled-components": "^5.1.1",
+    "tslint": "^6.1.3",
     "typescript": "~3.7.2"
   },
   "scripts": {
